--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-navbar>
 </app-navbar>
 <div class="container" style="margin-top: 100px;">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
+    <!-- <app-home></app-home> -->
     <!-- <ul>
         <li *ngFor="let u of users">{{u.id}} -{{u.userName}}</li>
 
