--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,27 +1,27 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
 
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a class="navbar-brand" routerLink="home" routerLinkActive="active">Dating App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="collapse navbar-collapse " id="navbarCollapse">
             <ul *ngIf="sercicio.currentUser$  | async" class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Matches</a>
+                    <a class="nav-link " routerLinkActive="active" routerLink="/members" aria-current="page" href="#">Matches</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lists</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="lists">Lists</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Messages</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="messages">Messages</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" (click)="logout()">Logout</a>
                 </li> -->
             </ul>
-            <div class="dropdown" *ngIf="sercicio.currentUser$ | async" dropdown>
-                <a href (click)="false" class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+            <div class="dropdown" *ngIf="(sercicio.currentUser$ | async) as u" dropdown>
+                <a href (click)="false" class="dropdown-toggle text-light" dropdownToggle>Wellcome {{u.userName | titlecase}}</a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a class="dropdown-item">Edit Profile</a>
                     <div class="dropdown-divider"></div>
@@ -29,12 +29,15 @@
 
                 </div>
             </div>
-            <form #loginGorm="ngForm" *ngIf="(sercicio.currentUser$  | async)===null" class="d-flex" (ngSubmit)="login()" autocomplete="off" role="search">
-                <input class="form-control me-2" type="text" [(ngModel)]="model.username" placeholder="userName" name="username">
-                <input [(ngModel)]="model.password" name="password" class="form-control me-2" type="password" placeholder="password">
-                <button class="btn btn-outline-success" type="submit">Login</button>
-                <!-- <button class="btn btn-outline-success" *ngIf="loggedIn" type="submit">Logout</button> -->
-            </form>
+            <div class="row float-end">
+                <form #loginGorm="ngForm" *ngIf="(sercicio.currentUser$  | async)===null" class="d-flex" (ngSubmit)="login()" autocomplete="off" role="search">
+                    <input class="form-control me-2" type="text" [(ngModel)]="model.username" placeholder="userName" name="username">
+                    <input [(ngModel)]="model.password" name="password" class="form-control me-2" type="password" placeholder="password">
+                    <button class="btn btn-success" type="submit">Login</button>
+                    <!-- <button class="btn btn-outline-success" *ngIf="loggedIn" type="submit">Logout</button> -->
+                </form>
+            </div>
+
         </div>
     </div>
 </nav>
